<resources>
    <string name="app_name">ecommerce</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="change_profile">Change Profile</string>
    <string name="product_price_">Product Price</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_name_">Product Name</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="add">ADD</string>
    <string name="register_join_here">Register/Join Here</string>
</resources>