<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cv"
    tools:context=".ProductDetailsActivity">


    <RelativeLayout
        android:id="@+id/relat"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/product_image_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/product_price_details"
            android:scaleType="centerCrop"

            />

        <TextView
            android:id="@+id/product_price_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/product_name_details"
            android:layout_marginTop="3dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/product_price"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"


            />

        <TextView
            android:id="@+id/product_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/product_description_details"
            android:gravity="center"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"


            />

        <TextView
            android:id="@+id/product_description_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pd_add_to_cart_btn"
            android:layout_marginTop="8dp"
            android:paddingTop="130dp"
            android:background="@android:color/holo_blue_light"
            android:textAlignment="center"
            android:text="@string/product_description"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"


            />

        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
            android:id="@+id/number_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            app:finalNumber="2"
            app:initialNumber="0"
            app:textSize="6sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/pd_add_to_cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="10dp"
            android:background="#7758AE"
            android:text="@string/add"
            android:textSize="30sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>