<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        >

        <ImageView
            android:id="@+id/cart_image_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"

            />

        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_below="@id/cart_image_details"
            android:text="@string/product_name"
            android:background="@android:color/holo_blue_bright"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/cart_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_name"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/product_quantity"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:background="@android:color/holo_blue_bright"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_below="@id/cart_product_quantity"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/product_price"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>